; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_commit.c_git_commit_tree.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_commit.c_git_commit_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_commit_tree(i32** %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  store i32** %0, i32*** %3, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %4, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %6 = call i32 @assert(%struct.TYPE_6__* %5)
  %7 = load i32**, i32*** %3, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = call i32 @git_tree_lookup(i32** %7, i32 %11, i32* %13)
  ret i32 %14
}

declare dso_local i32 @assert(%struct.TYPE_6__*) #1

declare dso_local i32 @git_tree_lookup(i32**, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
